전체 리팩토링, CI/CD 개선, 커뮤니티 기능 추가
- CI/CD: 워크플로우 분리 (ci.yml 빌드검증 + deploy.yml main 배포)
- CI/CD: GitHub Actions v4, temurin, Gradle 캐시 적용
- EB: JVM 메모리 옵션, Spring Profile, killall 수정
- nginx: gzip 활성화
- DTO class → record 전환 (LoginRequest, SignUpRequest 등)
- DB 설정 환경변수화 (하드코딩 제거)
- LikePostJpaEntity 패키지 정리, FriendShipRepositoryImpI 오타 수정
- 커뮤니티(댓글) 기능 추가
- root build.gradle 불필요한 application 플러그인 제거

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>